--- a/next/package.json
+++ b/next/package.json
@@ -14,6 +14,7 @@
     "@formatjs/intl-localematcher": "^0.5.4",
     "@headlessui/react": "^2.1.2",
     "@mapbox/rehype-prism": "^0.9.0",
+    "@radix-ui/react-slot": "^1.2.4",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^9.3.0",
     "@strapi/blocks-react-renderer": "^1.0.1",
@@ -29,7 +30,10 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^12.23.12",
     "fuzzy-search": "^3.2.1",
+    "lenis": "^1.3.17",
+    "lucide-react": "^0.563.0",
     "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.29.0",
     "negotiator": "^0.6.3",
     "next": "15.5.8",
     "next-view-transitions": "^0.2.0",
