resposivness done, requires animations, images, color consistency

--- a/next/.env.example
+++ b/next/.env.example
@@ -3,3 +3,10 @@ PORT=3000
 
 NEXT_PUBLIC_API_URL=http://localhost:1337
 PREVIEW_SECRET=preview_secret
+
+# Supabase Database URLs (get these from Supabase Dashboard > Settings > Database)
+# Connection pooling URL - used for serverless functions
+DATABASE_URL="postgresql://postgres.[PROJECT-REF]:[PASSWORD]@aws-0-[REGION].pooler.supabase.com:6543/postgres?pgbouncer=true"
+
+# Direct connection URL - used for migrations
+DIRECT_URL="postgresql://postgres.[PROJECT-REF]:[PASSWORD]@aws-0-[REGION].pooler.supabase.com:5432/postgres"
