--- a/next/package.json
+++ b/next/package.json
@@ -14,11 +14,15 @@
     "@formatjs/intl-localematcher": "^0.5.4",
     "@headlessui/react": "^2.1.2",
     "@mapbox/rehype-prism": "^0.9.0",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-toast": "^1.2.15",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^9.3.0",
     "@strapi/blocks-react-renderer": "^1.0.1",
     "@strapi/client": "^1.6.0",
+    "@supabase/supabase-js": "^2.93.1",
     "@tabler/icons-react": "^3.11.0",
     "@tailwindcss/typography": "^0.5.13",
     "@tsparticles/engine": "^3.5.0",
@@ -36,7 +40,10 @@
     "motion": "^12.29.0",
     "negotiator": "^0.6.3",
     "next": "15.5.8",
+    "next-themes": "^0.4.6",
     "next-view-transitions": "^0.2.0",
+    "pg": "^8.17.2",
+    "prisma": "^7.3.0",
     "qs": "^6.14.0",
     "react": "19.1.2",
     "react-dom": "19.1.2",
@@ -44,6 +51,7 @@
     "react-icons": "^5.2.1",
     "react-wrap-balancer": "^1.1.1",
     "sharp": "^0.33.5",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.168.0",
@@ -52,10 +60,12 @@
   "devDependencies": {
     "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
+    "@types/pg": "^8",
     "@types/qs": "^6.9.16",
     "@types/react": "19.1.10",
     "@types/react-dom": "19.1.7",
     "@types/three": "^0.179.0",
+    "dotenv": "^17.2.3",
     "eslint": "^8",
     "eslint-config-next": "15.5.0",
     "postcss": "^8",
