--- a/next/package.json
+++ b/next/package.json
@@ -75,5 +75,8 @@
   "resolutions": {
     "@types/react": "19.1.10",
     "@types/react-dom": "19.1.7"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
